k8s/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: johans-test-app
spec:
  ingressClassName: kong-keycloak-internal
  rules:
    - host: johans-test-app.aranya.local
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: johans-test-app
                port:
                  number: 80
